# M.L.abs

./: .gitignore
AI-agents-langgraph/: 02-core_concepts.py  03-modellini-chat-semplificati.py  pyproject.toml
llms/: pyproject.toml  test-01.py  test_hft.py
llms/00-test-generale/: test_groq.py
llms/00-test-generali-base/: test_groq_API.py  test_hft.py
llms/01-llm-api/: test-01.py  test-02.py
llms/02-local-transformers/: 01-lezione_colab_intro.py  02-tranformers.py  03-under_pipeline_transformer.py  README.txt
llms/03-rag/: 46-create-vector-index.py  47-search-vec-index.py  langchain-01.py  langchain-02-memory.py  my_simple_corpus_index.pkl  rag-embedding-cosinesim.py
llms/04-fine-tuning/: 54-FT-gpt2-hf.py
llms/05-progetto-chatbot/: catena_RAG.py  final-full-chatbot.py  final.py  full-rag.py  motore_ricerca_semantico.py
llms/test-generale/: pyproject.toml
rnn_firstrepo/: README.md  many_to_many_char.py  many_to_one.py  many_to_one_imdb.py  notebook_01.py  notebook_02.py  pg65391.txt  pyproject.toml
rnn_firstrepo/dockers/: README.md  ch2ch_OKD-job-config.yml  imdb_Dockerfile  imdb_OKD-job-config.yml  imdb_docker-compose.yml
self-supervised-learning/: digits_train.py  pyproject.toml  requirements.txt  train.py
testing-docker/00/: Dockerfile  numbers.txt  print-stats.py
testing-docker/00/outputs/: stats.json
testing-docker/01/: Dockerfile  Es-01.txt
testing-docker/01/workspace/: testnotebook.ipynb
testing-docker/01/workspace/.ipynb_checkpoints/: testnotebook-checkpoint.ipynb
testing-docker/02-ml_excercise/: Dockerfile  Ex-02.txt  docker-compose.yml  train.py
transformers/: pyproject.toml
transformers_test/: bert_finetuning.py  pyproject.toml  test_01.py  test_02.py  test_pretrained.py
