[tool.poetry]
name = "ai-agents-langgraph"
version = "0.1.0"
description = ""
authors = ["Jon <jb5nnhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
langchain = "^1.3.1"
langchain-core = "^1.4.0"
langgraph = "^1.2.0"
langchain-huggingface = "^1.2.2"
python-dotenv = "^1.2.2"
transformers = "^5.9.0"
torch = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
