[tool.poetry]
name = "llms"
version = "0.1.0"
description = ""
authors = ["Jon <jb5nnhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.11.0"
transformers = "^5.5.4"
groq = "^1.2.0"
requests = "^2.33.1"
marimo = "^0.23.2"
dotenv = "^0.9.9"
scikit-learn = "^1.8.0"
sentence-transformers = "^5.4.1"
ipython = "^9.13.0"
datasets = "^4.8.4"
accelerate = "^1.13.0"
langchain = "^1.2.15"
langchain-community = "^0.4.1"
langchain-huggingface = "^1.2.2"
faiss-cpu = "^1.13.2"
langchain-text-splitters = "^1.1.2"
tiktoken = "^0.12.0"
python-dotenv = "^1.2.2"
gradio = "^6.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
