[tool.poetry]
name = "rnn-firstrepo"
version = "0.1.0"
description = ""
authors = ["Jon"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.11.0"
datasets = "^4.8.4"
marimo = "^0.21.1"
pandas = "^3.0.1"
numpy = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
