[tool.poetry]
name = "self-supervised-learning"
version = "0.1.0"
description = "test per il learning autosupervisionat"
authors = ["Jon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.13.2"
numpy = "^2.4.3"
matplotlib = "^3.10.8"
tensorflow = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
