[tool.poetry]
name = "transformers"
version = "0.1.0"
description = ""
authors = ["Jon <jb5nnhy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "^2.11.0"
numpy = "^2.4.4"
marimo = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
